# isync-netease-fix

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  aerc-netease.md  autodefs.h.in  configure  configure.ac  mbsync-get-cert
src/: Makefile.in  config.c  drv_imap.c  main_list.c  main_sync.c  mbsync.1.in  socket.c  sync.c  sync_state.c  util.c
